Fixed Dark Mode

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,5 +25,5 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-  background-color: rgb(66, 64, 64);
+  background-color: rgb(154, 150, 150);
 }
